// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c26 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
}

.c19.hidden {
  margin: 0;
  max-height: 0;
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c13 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: none;
}

.c12 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c10 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(29,29,27,1.00);
}

.IS3 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS4 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS5 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS6 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS7 {
  margin: 0;
}

.IS8 {
  display: none;
}

.IS9 {
  height: 100%;
  width: 100%;
}

.IS10 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS11 {
  height: 100%;
  width: 100%;
}

.IS12 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS13 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS14 {
  margin: 0;
}

.IS15 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsiveweb__HeaderContainer-sc-1epfk4y-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="c4 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c5 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c5 css-text-901oao r-color-1yqk5fa r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j S4"
          >
            Some Headline
          </h1>
          <div
            className="c6 responsiveweb__FlagsContainer-sc-1epfk4y-2 c6 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c7 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c7 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="c8 responsiveweb__MetaContainer-sc-1epfk4y-7 c8 css-view-1dbjc4n"
          >
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c10 responsiveweb__Separator-sc-1epfk4y-8 c10 css-view-1dbjc4n"
            />
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c11 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c11 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12 responsiveweb__LeadAsset-sc-1epfk4y-10 c12 css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS7"
          >
            <div
              className="css-view-1dbjc4n IS6"
            >
              <div
                className="css-view-1dbjc4n IS5"
              >
                <div
                  className="IS4"
                >
                  <img
                    className="IS3"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c13 c14 c15"
        >
          <div
            className="IS8"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS14"
          >
            <div
              className="css-view-1dbjc4n IS13"
            >
              <div
                className="css-view-1dbjc4n IS12"
              >
                <div
                  className="IS11"
                >
                  <div
                    className="IS10"
                  >
                    <video
                      className="video-js IS9"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS15"
        />
        <div>
          <div
            className="c26 responsiveweb__SecondaryImg-sc-16nqyj8-7 c26 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c27 responsiveweb__InlineImg-sc-16nqyj8-8 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c26 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
}

.c19.hidden {
  margin: 0;
  max-height: 0;
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c13 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: none;
}

.c12 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c10 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(123,0,70,1.00);
}

.IS3 {
  font-family: Flama-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsiveweb__HeaderContainer-sc-1epfk4y-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="c4 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c5 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="c6 responsiveweb__FlagsContainer-sc-1epfk4y-2 c6 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c7 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c7 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="c8 responsiveweb__MetaContainer-sc-1epfk4y-7 c8 css-view-1dbjc4n"
          >
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c10 responsiveweb__Separator-sc-1epfk4y-8 c10 css-view-1dbjc4n"
            />
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c11 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c11 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12 responsiveweb__LeadAsset-sc-1epfk4y-10 c12 css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c13 c14 c15"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="c26 responsiveweb__SecondaryImg-sc-16nqyj8-7 c26 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c27 responsiveweb__InlineImg-sc-16nqyj8-8 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c26 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
}

.c19.hidden {
  margin: 0;
  max-height: 0;
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c13 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: none;
}

.c12 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c10 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(188,51,133,1.00);
}

.IS3 {
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsiveweb__HeaderContainer-sc-1epfk4y-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="c4 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c5 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="c6 responsiveweb__FlagsContainer-sc-1epfk4y-2 c6 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c7 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c7 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="c8 responsiveweb__MetaContainer-sc-1epfk4y-7 c8 css-view-1dbjc4n"
          >
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c10 responsiveweb__Separator-sc-1epfk4y-8 c10 css-view-1dbjc4n"
            />
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c11 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c11 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12 responsiveweb__LeadAsset-sc-1epfk4y-10 c12 css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c13 c14 c15"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="c26 responsiveweb__SecondaryImg-sc-16nqyj8-7 c26 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c27 responsiveweb__InlineImg-sc-16nqyj8-8 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c26 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
}

.c19.hidden {
  margin: 0;
  max-height: 0;
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c13 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c4 {
  border-radius: 50%;
  height: 100px;
  overflow: hidden;
  width: 100px;
}

.c11 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c6 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c9 {
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  display: none;
}

.c12 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c26 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 118px;
    width: 118px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c8 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c10 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c7 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  margin-bottom: 25px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S3 {
  margin-bottom: 10px;
}

.S4 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S5 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S6 {
  line-height: 15px;
  margin-top: 15px;
}

.S7 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  margin-bottom: 25px;
  padding-top: 35px;
}

.S8 {
  margin-bottom: 20px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(241,61,0,1.00);
}

.IS3 {
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  opacity: 1;
  z-index: 2;
  width: 100%;
  position: absolute;
  display: block;
}

.IS5 {
  display: table;
  height: 0;
  overflow: hidden;
  position: relative;
  width: 100%;
  padding-bottom: 56.25%;
}

.IS6 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS7 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS8 {
  margin: 0;
}

.IS9 {
  display: none;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS12 {
  height: 100%;
  width: 100%;
}

.IS13 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS14 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS15 {
  margin: 0;
}

.IS16 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
  width: 100%;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"author":{"@type":"Person","name":"Some byline"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=685","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z"}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="c3 responsiveweb__HeaderContainer-sc-1epfk4y-3 c3 css-view-1dbjc4n r-alignItems-1awozwy r-marginBottom-eektet r-marginLeft-1n0xq6e r-marginRight-zso239 r-paddingTop-elmauq S7"
        >
          <div
            className="c4 responsiveweb__AuthorImageContainer-sc-1epfk4y-0 c4 css-view-1dbjc4n r-marginBottom-eektet S1"
          >
            <Image />
          </div>
          <div
            className="css-view-1dbjc4n r-marginBottom-15d164r S3"
          >
            <div
              className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S2"
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c5 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1epfk4y-4 c5 css-text-901oao r-color-1yqk5fa r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S4"
          >
            Some Headline
          </h1>
          <div
            className="c6 responsiveweb__FlagsContainer-sc-1epfk4y-2 c6 css-view-1dbjc4n"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c7 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1epfk4y-9 c7 css-text-901oao r-color-1khnkhu r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j S5"
          >
            Some Standfirst
          </h2>
          <div
            className="c8 responsiveweb__MetaContainer-sc-1epfk4y-7 c8 css-view-1dbjc4n"
          >
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c10 responsiveweb__Separator-sc-1epfk4y-8 c10 css-view-1dbjc4n"
            />
            <div
              className="c9 responsiveweb__Meta-sc-1epfk4y-6 c9 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj"
            >
              <div
                className="c11 responsiveweb__DatePublicationContainer-sc-1epfk4y-1 c11 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-19h5ruw S6"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12 responsiveweb__LeadAsset-sc-1epfk4y-10 c12 css-view-1dbjc4n r-marginBottom-117bsoe S8"
        >
          <figure
            className="IS8"
          >
            <div
              className="css-view-1dbjc4n IS7"
            >
              <div
                className="css-view-1dbjc4n IS6"
              >
                <div
                  className="IS5"
                >
                  <img
                    className="IS4"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption />
            </figcaption>
          </figure>
        </div>
        <div
          className="c13 c14 c15"
        >
          <div
            className="IS9"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS15"
          >
            <div
              className="css-view-1dbjc4n IS14"
            >
              <div
                className="css-view-1dbjc4n IS13"
              >
                <div
                  className="IS12"
                >
                  <div
                    className="IS11"
                  >
                    <video
                      className="video-js IS10"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <AdContainer
          className="IS16"
        />
        <div>
          <div
            className="c26 responsiveweb__SecondaryImg-sc-16nqyj8-7 c26 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c27 responsiveweb__InlineImg-sc-16nqyj8-8 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
